--- a/travelsFront/app/templates/components/list-filter.hbs
+++ b/travelsFront/app/templates/components/list-filter.hbs
@@ -1,16 +1,16 @@
 <div>
-	{{#paper-button bubbles=false onClick=(action "handleFilterEntry" value_name )}}{{t 'list.button.search'}}{{/paper-button}}
-	{{#paper-select id="filter" value=value_project.name onChange=(action "handleChange") placeholder=placeholder_message }}
+	{{#paper-button bubbles=false onClick=(action "handleFilterEntry" valueName )}}{{t 'list.button.search'}}{{/paper-button}}
+	{{#paper-select id="filter" value=valueProject.name onChange=(action "handleChange") placeholder=placeholderLabel }}
 		{{#each projects as |project|}}
   		{{#paper-option value=project }}
     		{{project.name}}
   		{{/paper-option}}
 		{{/each}}
 	{{/paper-select}}
-	{{input value=value_name  placeholder=(t 'paceholder.filterByName')}}
-	{{input value=value_startDate placeholder=(t 'paceholder.filterByStartDate')}}
-	{{input value=value_endDate placeholder=(t 'paceholder.filterByEndDate')}}	
-	{{#paper-button bubbles=false onClick=(action "clearFilters")}}{{t 'list.button.clear'}}{{/paper-button}}		
+	{{input value=valueName  placeholder=(t 'paceholder.filterByName')}}
+	{{input value=valueStartDate placeholder=(t 'paceholder.filterByStartDate')}}
+	{{input value=valueEndDate placeholder=(t 'paceholder.filterByEndDate')}}
+	{{#paper-button bubbles=false onClick=(action "clearFilters")}}{{t 'list.button.clear'}}{{/paper-button}}
 </div>
 {{yield results}}
 
