--- a/travelsFront/app/templates/secretary-compensation.hbs
+++ b/travelsFront/app/templates/secretary-compensation.hbs
@@ -1,12 +1,17 @@
 {{ page-toolbar pageTitle=(t "petition_edit.title") }}
 
 {{#paper-content classNames="md-padding"}}
-    {{# model-form/form model registerForm=this successMessage=(t 'petition_saved') 
-            onError=(action 'onError') onSuccess=(action 'onSuccess') as |form| }}
-        {{ form.messages }}
-        {{ form.fields }}
-        {{# form.controls }}
-            {{list-action action=(action "handleSubmit") confirm=true value=(t 'form.button.submit') tooltip-message=(t 'tooltip_save_b4_submit') promptTitle=(t 'prompt_submit_title') promptMessage=(t 'prompt_submit_message') }}
-        {{/ form.controls}}
-    {{/ model-form/form }}
+  {{# model-form/form model registerForm=this successMessage=(t 'petition_saved') 
+    onError=(action 'onError') onSuccess=(action 'onSuccess') as |form| }}
+      {{ form.messages }}
+      {{ form.fields }}
+      {{# form.controls }}
+        {{list-action action=(action "handleSubmit") 
+	        confirm=true value=(t 'form.button.submit') 
+	        tooltip-message=(t 'tooltip_save_b4_submit') 
+	        promptTitle=(t 'prompt_submit_title') 
+	        promptMessage=(t 'prompt_submit_message') 
+        }}
+      {{/ form.controls}}
+  {{/ model-form/form }}
 {{/paper-content}}
