--- a/travelsFront/app/templates/components/list-filter.hbs
+++ b/travelsFront/app/templates/components/list-filter.hbs
@@ -7,9 +7,9 @@
   		{{/paper-option}}
 		{{/each}}
 	{{/paper-select}}
-	{{input value=filters.name  placeholder=(t 'paceholder.filterByName')}}
-	{{input value=filters.startDate placeholder=(t 'paceholder.filterByStartDate')}}
-	{{input value=filters.endDate placeholder=(t 'paceholder.filterByEndDate')}}
+	{{input value=filters.name  placeholder=(t 'placeholder.filterByName')}}
+	{{input value=filters.startDate placeholder=(t 'placeholder.filterByStartDate')}}
+	{{input value=filters.endDate placeholder=(t 'placeholder.filterByEndDate')}}
 	{{#paper-button bubbles=false onClick=(action "clearFilters")}}{{t 'list.button.clear'}}{{/paper-button}}
 </div>
 {{yield results}}
