--- a/travelsFront/app/templates/user-manual.hbs
+++ b/travelsFront/app/templates/user-manual.hbs
@@ -3,17 +3,19 @@
     {{#paper-card-title-text}}
   		<h4>Δημιουργία και Διαχείριση Λογαριασμού</h4>			      
 			<p>
-				Ο μετακινούμενος έχει τη δυνατότητα να δημιουργήσει λογαριασμό στην εφαρμογή 
+				Ο χρήστης έχει τη δυνατότητα να δημιουργήσει λογαριασμό στην εφαρμογή 
 				επιλέγοντας την καρτέλα «Εγγραφή» και συμπληρώνοντας τα παρακάτω στοιχεία:
 			<ul>
 				<li>Όνομα Χρήστη</li>
 				<li>Κωδικός Πρόσβασης</li>
 				<li>Email</li>
 			</ul>
-				Με την αποθήκευση των παραπάνω στοιχείων ο μετακινούμενος θα λάβει στο email 
+				Με την αποθήκευση των παραπάνω στοιχείων ο χρήστης θα λάβει στο email 
 				που έχει δηλώσει ένα email ενεργοποίησης του λογαριασμού του. Αφού επιλέξει το 
 				link ενεργοποίησης, έχει τη δυνατότητα να συνδεθεί στην εφαρμογή από την καρτέλα «Είσοδος».
-				Κατά την πρώτη είσοδο στην εφαρμογή, ο μετακινούμενος θα πρέπει να μεταβεί στην καρτέλα του 
+				(Σημειώνεται ότι προκειμένου να αποδοθούν επιπλέον δικαιώματα στον λογαριασμό ενός χρήστη,
+				θα πρέπει ο τελευταίος να επικοινωνήσει με τους διαχειριστές της εφαρμογής.)
+				Κατά την πρώτη είσοδο στην εφαρμογή, ο χρήστης θα πρέπει να μεταβεί στην καρτέλα του 
 				«Προφίλ» και να συμπληρώσει τα παρακάτω προσωπικά του στοιχεία:
 			<ul>
 				<li>Όνομα</li>
@@ -24,152 +26,11 @@
 				<li>Δ.Ο.Υ (Λίστα επιλογών)</li>
 				<li>ΙΒΑΝ</li>
 			</ul>
-				Επιπλέον, από την καρτέλα «Αλλαγή Κωδικού Πρόσβασης», ο μετακινούμενος έχει την δυνατότητα 
+				Επιπλέον, από την καρτέλα «Αλλαγή Κωδικού Πρόσβασης», ο χρήστης έχει την δυνατότητα 
 				να αλλάξει το κωδικό πρόσβασης που χρησιμοποιεί για να συνδεθεί στο σύστημα.
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
 {{/paper-card}}
 
-{{#paper-card}}
-  {{#paper-card-title}}
-    {{#paper-card-title-text}}
-			<h4>Δημιουργία Νέας Αίτησης Μετακίνησης</h4>    
-			<p>
-				Στη συνέχεια, έχει τη δυνατότητα να μεταβεί στην καρτέλα «Νέα Αίτηση» και να δημιουργήσει μία 
-				αίτηση μετακίνησης.
-				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία (με bold σημειώνονται τα υποχρεωτικά πεδία):
-			<ul>
-				<li><b>Έργο - Υπεύθυνος Έργου (Λίστα Επιλογών)</b></li>
-				<li><b>Αιτιολογία Μετακίνησης</b></li>
-				<li><b>Τόπος Προορισμού - Από</b></li>
-				<li><b>Τόπος Προορισμού - Προς</b></li>
-				<li><b>Έναρξη Εργασιών</b></li>
-				<li><b>Λήξη Εργασιών</b></li>
-				<li>Αναχώρηση</li>
-				<li>Επιστροφή</li>
-				<li>Μέσο Μετακίνησης (Λίστα Επιλογών)</li>
-				<li>Τιμή Εισιτηρίου</li>
-				<li>Κάλυψη Διατροφής (Λίστα Επιλογών)</li>
-				<li>Διανυκτέρευση (Ημερήσια): έξοδα καταλύματος (θα πρέπει να συμπληρωθούν είτε σε τοπικό νόμισμα είτε σε ευρώ)</li>
-				<li>Λοιπά Έξοδα Μετακίνησης: πχ εισιτήρια μέσων μαζικής μεταφοράς (προβλεπόμενη τιμή)</li>
-				<li>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</li>
-				<li>Κόστος Συμμετοχής: εγγραφές σε συνέδρια, events κλπ. (θα πρέπει να συμπληρωθεί είτε σε τοπικό νόμισμα είτε σε ευρώ).</li>
-				<li>Αρχικές Προτάσεις Μετακινούμενου</li>
-			</ul>
-				Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτηση του.
-			</p>
-		{{/paper-card-title-text}}
-  {{/paper-card-title}}
-{{/paper-card}}
-
-{{#paper-card}}
-  {{#paper-card-title}}
-    {{#paper-card-title-text}}
-	    <h4>Λίστα Αιτήσεων</h4>
-			<p>
-				Στην καρτέλα «Οι Αιτήσεις μου» παρουσιάζονται, ανάλογα με το status στο οποίο βρίσκονται, οι αιτήσεις του μετακινούμενου. 
-				Στην συγκεκριμένη καρτέλα, ο μετακινούμενος έχει τη δυνατότητα να πραγματοποιήσει τις παρακάτω ενέργειες:
-			<ul>	 
-			 	<li><b>Επεξεργασία</b>: ενέργεια κατά την οποία ο μετακινούμενος έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιαςαίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li> 
-				<li><b>Διαγραφή</b>: ενέργεια κατά την οποία ο μετακινούμενος έχει την δυνατότητα να διαγράψει μια αίτηση του.</li>
-				<li><b>Αναίρεση της υποβολής</b>: με τη συγκεκριμένη ενέργεια δίνεται η δυνατότητα της αναίρεσης της υποβολής μιας αίτησης και επιστροφή της στην προηγούμενη κατάσταση.</li>
-			</ul>	
-			</p>
-		{{/paper-card-title-text}}
-  {{/paper-card-title}}
-{{/paper-card}}
-
-{{#paper-card}}
-  {{#paper-card-title}}
-    {{#paper-card-title-text}}
-			<h4>Δημιουργία Αίτησης Αποζημίωσης</h4>
-			<p>Ο μετακινούμενος, μετά την άφιξη του, θα πρέπει να συνδεθεί εκ νέου στο σύστημα και να συμπληρώσει τα ακόλουθα στοιχεία:
-			<ul>
-				<li>Ανέβασμα αρχείων: ο μετακινούμενος θα πρέπει να ανεβάσει το πρόγραμμα της μετακίνησης</li>
-				<li>Ατζέντα: Ο μετακινούμενος θα πρέπει να καταγράψει τον απολογισμό της μετακίνησης</li>
-				<li>Λοιπά Έξοδα Μετακίνησης: πχ εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή)</li>
-				<li>Λοιπά Έξοδα Μετακίνησης  Περιγραφή</li>
-			</ul>
-			Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει 
-			την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωση του.
-			</p>
-		{{/paper-card-title-text}}
-  {{/paper-card-title}}
-{{/paper-card}}		
-
-{{#paper-card}}
-  {{#paper-card-title}}
-    {{#paper-card-title-text}}
-			<h4>Ενέργειες Από τον Μετακινούμενο</h4> 
-			<p>Στη συνέχεια θα παρουσιάσουμε όλες τις καταστάσεις στις οποίες είναι δυνατόν να βρεθεί μια αίτηση.
-			Στον πίνακα που ακολουθεί παρουσιάζονται τα statuses των αιτήσεων της εφαρμογής καθώς και οι ενέργειες που μπορεί να 
-			εκτελέσει ο μετακινούμενος ανάλογα με το status της αίτησης:
-			</p>
-			<div class="container">
-			<table class="table responsive"> 
-		    <thead>
-	        <tr>
-	          <th>Status</th>
-	          <th>Description</th>
-	          <th>Actions</th>
-	        </tr>
-		    </thead>
-		    <tbody>
-	       	<tr>
-	          <td>1</td> 
-	          <td>Σε επεξεργασία από τον μετακινούμενο</td>
-	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής,  Διαγραφή</td>
-	        </tr>
-	        <tr>
-	          <td>2</td> 
-	          <td>Υποβεβλημένη από τον μετακινούμενο</td>
-	          <td>Αναίρεση Υποβολής</td>
-	        </tr>
-	        <tr>
-	          <td>3</td> 
-	          <td>Σε επεξεργασία από την γραμματεία</td>
-	          <td>-</td>
-	        </tr>
-	        <tr>
-	          <td>4</td> 
-	          <td>Οριστικοποιημένη από την γραμματεία</td>
-	          <td>-</td>
-	        </tr>
-	        <tr>
-	          <td>5</td> 
-	          <td>Απόφαση Μετακίνησης υπογεγραμμένη από Πρόεδρο</td>
-	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής</td>
-	        </tr>
-	        <tr>
-	          <td>6</td> 
-	          <td>Σε επεξεργασία από μετακινούμενο για αποζημίωση</td>
-	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής</td>
-	        </tr>
-	        <tr>
-	          <td>7</td> 
-	          <td>Υποβεβλημένη από μετακινούμενο για αποζημίωση</td>
-	          <td>Αναίρεση Υποβολής</td>
-	        </tr>
-	        <tr>
-	          <td>8</td> 
-	          <td>Σε επεξεργασία από τον Υπεύθυνο Μετακινήσεων</td>
-	          <td>-</td>
-	        </tr>
-	        <tr>
-	          <td>9</td> 
-	          <td>Οριστικοποιημένη από τον Υπεύθυνο Μετακινήσεων</td>
-	          <td>-</td>
-	        </tr>
-	        <tr>
-	          <td>10</td> 
-	          <td>Απόφαση Αποζημίωσης υπογεγραμμένη από Πρόεδρο</td>
-	          <td>-</td>
-	        </tr>
-		    </tbody>
-			</table>
-			</div>
-		{{/paper-card-title-text}}
-  {{/paper-card-title}}
-{{/paper-card}}
 	
