--- a/travelsFront/app/templates/help.hbs
+++ b/travelsFront/app/templates/help.hbs
@@ -2,7 +2,7 @@
 
 {{#paper-content classNames="md-padding"}}
   {{#if (can "see petition")}}
-    {{partial 'user-manual'}}      
+    {{partial 'traveler-manual'}}      
   {{else if (can "approve petition")}}
     {{partial 'secretary-manual'}}
   {{else if (can "compensate petition")}}
