Change button label from 'save' to 'register'

--- a/travelsFront/app/templates/signup.hbs
+++ b/travelsFront/app/templates/signup.hbs
@@ -1,4 +1,4 @@
 {{ page-toolbar pageTitle=(t "signup.title") }}
 {{#paper-content}}
-    {{ model-form/form model onSuccess='onSuccess'}}
+    {{ model-form/form model onSuccess='onSuccess' submitLabel=(t "form.button.signup")}}
 {{/paper-content}}
