Update manual content

--- a/travelsFront/app/templates/secretary-manual.hbs
+++ b/travelsFront/app/templates/secretary-manual.hbs
@@ -39,7 +39,7 @@
 				<li><b>Ημ. Πρ. Απόφασης Μετακίνησης</b></li>
 				<li><b>Αρ. Πρ. Απόφασης Μετακίνησης</b></li>
 			</ul>
-				Η Γραμματεία θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές της και στη συνέχεια να υποβάλει την αίτηση.
+				Η Γραμματεία θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές της και στη συνέχεια να υποβάλει την αίτηση. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της.
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
@@ -50,11 +50,11 @@
     {{#paper-card-title-text}}
 	    <h4>Λίστα Αιτήσεων</h4>
 			<p>
-				Στην καρτέλα «Λίστα Αιτήσεων» παρουσιάζονται, ανάλογα με το status στο οποίο βρίσκονται, οι αιτήσεις των μετακινούμενων. 
+				Στην καρτέλα «Λίστα Αιτήσεων» παρουσιάζονται, ανάλογα με την κατάσταση (status) στην οποία βρίσκονται, οι αιτήσεις των μετακινούμενων. 
 				Στην συγκεκριμένη καρτέλα, η Γραμματεία έχει τη δυνατότητα να πραγματοποιήσει τις παρακάτω ενέργειες: 
 			<ul>	 
-			 	<li><b>Επεξεργασία</b>: ενέργεια κατά την οποία η Γραμματεία έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιαςαίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li>
-				<li><b>Αναίρεση της υποβολής</b>: με τη συγκεκριμένη ενέργεια δίνεται η δυνατότητα της αναίρεσης της υποβολής μιας αίτησης και επιστροφή της στην προηγούμενη κατάσταση.</li>
+			 	<li><b>Επεξεργασία</b>: η Γραμματεία έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιας αίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li>
+				<li><b>Αναίρεση της υποβολής</b>: δυνατότητα αναίρεσης της υποβολής μιας αίτησης και επιστροφή της στην προηγούμενη κατάσταση.</li>
 				<li><b>Εξαγωγή Αρχείων</b>: δυνατότητα εξαγωγής των αρχείων «Αίτηση Δαπάνης Μετακίνησης» και «Απόφαση Μετακίνησης».</li>
 				<li><b>Έγκριση από Πρόεδρο</b>: με την συγκεκριμένη ενέργεια η Γραμματεία ενημερώνει το σύστημα ότι η μετακίνηση έχει λάβει την έγκριση του Προέδρου.</li>
 			</ul>	
@@ -70,16 +70,16 @@
     {{#paper-card-title-text}}
 			<h4>Ενέργειες Από Γραμματεία</h4> 
 			<p>Στη συνέχεια θα παρουσιάσουμε όλες τις καταστάσεις στις οποίες είναι δυνατόν να βρεθεί μια αίτηση. 
-			Στον πίνακα που ακολουθεί παρουσιάζονται τα statuses των αιτήσεων της εφαρμογής καθώς και οι ενέργειες 
-			που μπορεί να εκτελέσει η Γραμματεία ανάλογα με το status της αίτησης:
+			Στον πίνακα που ακολουθεί παρουσιάζονται οι καταστάσεις των αιτήσεων της εφαρμογής καθώς και οι ενέργειες 
+			που μπορεί να εκτελέσει η Γραμματεία ανάλογα με την κατάσταση της αίτησης:
 			</p>
 			<div class="container">
 			<table class="table responsive"> 
 		    <thead>
 	        <tr>
-	          <th>Status</th>
-	          <th>Description</th>
-	          <th>Actions</th>
+	          <th>Κατάσταση</th>
+	          <th>Περιγραφή</th>
+	          <th>Ενέργειες</th>
 	        </tr>
 		    </thead>
 		    <tbody>
