--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -3,8 +3,7 @@
     {{#paper-card-title-text}}
 			<h4>Δημιουργία Νέας Αίτησης Μετακίνησης</h4>    
 			<p>
-				Στη συνέχεια, έχει τη δυνατότητα να μεταβεί στην καρτέλα «Νέα Αίτηση» και να δημιουργήσει μία 
-				αίτηση μετακίνησης.
+				Ο μετακινούμενος θα πρέπει να μεταβεί στην καρτέλα «Νέα Αίτηση», προκειμένου να δημιουργήσει μία αίτηση μετακίνησης.
 				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία (με bold σημειώνονται τα υποχρεωτικά πεδία):
 			<ul>
 				<li><b>Έργο - Υπεύθυνος Έργου (Λίστα Επιλογών)</b></li>
@@ -24,7 +23,7 @@
 				<li>Κόστος Συμμετοχής: εγγραφές σε συνέδρια, events κλπ. (θα πρέπει να συμπληρωθεί είτε σε τοπικό νόμισμα είτε σε ευρώ).</li>
 				<li>Αρχικές Προτάσεις Μετακινούμενου</li>
 			</ul>
-				Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτηση του.
+				Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτησή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της.
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
@@ -35,12 +34,12 @@
     {{#paper-card-title-text}}
 	    <h4>Λίστα Αιτήσεων</h4>
 			<p>
-				Στην καρτέλα «Οι Αιτήσεις μου» παρουσιάζονται, ανάλογα με το status στο οποίο βρίσκονται, οι αιτήσεις του μετακινούμενου. 
+				Στην καρτέλα «Οι Αιτήσεις μου» παρουσιάζονται, ανάλογα με την κατάσταση (status) στην οποία βρίσκονται, οι αιτήσεις του μετακινούμενου. 
 				Στην συγκεκριμένη καρτέλα, ο μετακινούμενος έχει τη δυνατότητα να πραγματοποιήσει τις παρακάτω ενέργειες:
 			<ul>	 
-			 	<li><b>Επεξεργασία</b>: ενέργεια κατά την οποία ο μετακινούμενος έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιαςαίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li> 
-				<li><b>Διαγραφή</b>: ενέργεια κατά την οποία ο μετακινούμενος έχει την δυνατότητα να διαγράψει μια αίτηση του.</li>
-				<li><b>Αναίρεση της υποβολής</b>: με τη συγκεκριμένη ενέργεια δίνεται η δυνατότητα της αναίρεσης της υποβολής μιας αίτησης και επιστροφή της στην προηγούμενη κατάσταση.</li>
+			 	<li><b>Επεξεργασία</b>: ο μετακινούμενος έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιας αίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li> 
+				<li><b>Διαγραφή</b>: ο μετακινούμενος έχει την δυνατότητα να διαγράψει μια αίτησή του.</li>
+				<li><b>Αναίρεση της υποβολής</b>: δυνατότητα της αναίρεσης της υποβολής μιας αίτησης και επιστροφή της στην προηγούμενη κατάσταση.</li>
 			</ul>	
 			</p>
 		{{/paper-card-title-text}}
@@ -53,13 +52,12 @@
 			<h4>Δημιουργία Αίτησης Αποζημίωσης</h4>
 			<p>Ο μετακινούμενος, μετά την άφιξη του, θα πρέπει να συνδεθεί εκ νέου στο σύστημα και να συμπληρώσει τα ακόλουθα στοιχεία:
 			<ul>
-				<li>Ανέβασμα αρχείων: ο μετακινούμενος θα πρέπει να ανεβάσει το πρόγραμμα της μετακίνησης</li>
-				<li>Ατζέντα: Ο μετακινούμενος θα πρέπει να καταγράψει τον απολογισμό της μετακίνησης</li>
-				<li>Λοιπά Έξοδα Μετακίνησης: πχ εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή)</li>
-				<li>Λοιπά Έξοδα Μετακίνησης  Περιγραφή</li>
+				<li><b>Ανέβασμα αρχείων</b>: ο μετακινούμενος θα πρέπει να ανεβάσει το πρόγραμμα της μετακίνησης. Σε περίπτωση περισσότερων (π.χ. ατζέντα, αποδεικτικό παρακολούθησης) μπορεί να ανεβάσει ένα αρχείο τύπου zip</li>
+				<li><b>Ατζέντα</b>: Ο μετακινούμενος θα πρέπει να καταγράψει τον απολογισμό της μετακίνησης.</li>
+				<li><b>Λοιπά Έξοδα Μετακίνησης</b>: πχ εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
+				<li><b>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</b>: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου.</li>
 			</ul>
-			Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει 
-			την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωση του.
+			Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωσή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της.
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
@@ -70,16 +68,16 @@
     {{#paper-card-title-text}}
 			<h4>Ενέργειες Από τον Μετακινούμενο</h4> 
 			<p>Στη συνέχεια θα παρουσιάσουμε όλες τις καταστάσεις στις οποίες είναι δυνατόν να βρεθεί μια αίτηση.
-			Στον πίνακα που ακολουθεί παρουσιάζονται τα statuses των αιτήσεων της εφαρμογής καθώς και οι ενέργειες που μπορεί να 
-			εκτελέσει ο μετακινούμενος ανάλογα με το status της αίτησης:
+			Στον πίνακα που ακολουθεί παρουσιάζονται οι καταστάσεις των αιτήσεων της εφαρμογής καθώς και οι ενέργειες που μπορεί να 
+			εκτελέσει ο μετακινούμενος ανάλογα με την κατάσταση της αίτησης:
 			</p>
 			<div class="container">
 			<table class="table responsive"> 
 		    <thead>
 	        <tr>
-	          <th>Status</th>
-	          <th>Description</th>
-	          <th>Actions</th>
+	          <th>Κατάσταση</th>
+	          <th>Περιγραφή</th>
+	          <th>Ενέργειες</th>
 	        </tr>
 		    </thead>
 		    <tbody>
