--- a/travelsFront/app/templates/user-manual.hbs
+++ b/travelsFront/app/templates/user-manual.hbs
@@ -6,12 +6,11 @@
 				Ο χρήστης έχει τη δυνατότητα να δημιουργήσει λογαριασμό στην εφαρμογή 
 				επιλέγοντας την καρτέλα «Εγγραφή» και συμπληρώνοντας τα παρακάτω στοιχεία:
 			<ul>
-				<li>Όνομα Χρήστη</li>
+				<li>Όνομα Χρήστη (username)</li>
 				<li>Κωδικός Πρόσβασης</li>
 				<li>Email</li>
 			</ul>
-				Με την αποθήκευση των παραπάνω στοιχείων ο χρήστης θα λάβει στο email 
-				που έχει δηλώσει ένα email ενεργοποίησης του λογαριασμού του. Αφού επιλέξει το 
+				Με την αποθήκευση των παραπάνω στοιχείων ο χρήστης θα λάβει email ενεργοποίησης του λογαριασμού του. Αφού επιλέξει το 
 				link ενεργοποίησης, έχει τη δυνατότητα να συνδεθεί στην εφαρμογή από την καρτέλα «Είσοδος».
 				(Σημειώνεται ότι προκειμένου να αποδοθούν επιπλέον δικαιώματα στον λογαριασμό ενός χρήστη,
 				θα πρέπει ο τελευταίος να επικοινωνήσει με τους διαχειριστές της εφαρμογής.)
