Add some explanatory notes in traveler's manual

--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -4,7 +4,8 @@
 			<h4>Δημιουργία Νέας Αίτησης Μετακίνησης</h4>    
 			<p>
 				Ο μετακινούμενος θα πρέπει να μεταβεί στην καρτέλα «Νέα Αίτηση», προκειμένου να δημιουργήσει μία αίτηση μετακίνησης.
-				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία (με bold σημειώνονται τα υποχρεωτικά πεδία):
+				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία: (με <b>bold</b> σημειώνονται τα υποχρεωτικά πεδία ενώ τα μη υποχρεωτικά 
+				συμπληρώνονται σε περίπτωση που ο μετακινούμενος γνωρίζει την τιμή τους ή θέλει να δηλώσει μια επιθυμητή τιμή)
 			<ul>
 				<li><b>Έργο - Υπεύθυνος Έργου (Λίστα Επιλογών)</b></li>
 				<li><b>Αιτιολογία Μετακίνησης</b></li>
@@ -19,7 +20,7 @@
 				<li>Κάλυψη Διατροφής (Λίστα Επιλογών)</li>
 				<li>Διανυκτέρευση (Ημερήσια): έξοδα καταλύματος (θα πρέπει να συμπληρωθούν είτε σε τοπικό νόμισμα είτε σε ευρώ)</li>
 				<li>Λοιπά Έξοδα Μετακίνησης: πχ εισιτήρια μέσων μαζικής μεταφοράς (προβλεπόμενη τιμή)</li>
-				<li>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</li>
+				<li>Λοιπά Έξοδα Μετακίνησης - Περιγραφή: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου</li>
 				<li>Κόστος Συμμετοχής: εγγραφές σε συνέδρια, events κλπ. (θα πρέπει να συμπληρωθεί είτε σε τοπικό νόμισμα είτε σε ευρώ).</li>
 				<li>Αρχικές Προτάσεις Μετακινούμενου</li>
 			</ul>
