--- a/travelsFront/app/templates/secretary-petition.hbs
+++ b/travelsFront/app/templates/secretary-petition.hbs
@@ -1,6 +1,7 @@
 {{ page-toolbar pageTitle=(t "petition_edit.title") }}
 
-{{#paper-content classNames="md-padding"}}
+{{#paper-content}}
+  {{#paper-content padding=true}}
   {{# model-form/form model registerForm=this getModelForSave=getModelForSave successMessage=(t 'petition_saved')  
     onError=(action 'onError') onSuccess=(action 'onSuccess') as |form| }}
       {{ form.messages }}
@@ -14,4 +15,5 @@
         }}
       {{/ form.controls}}
   {{/ model-form/form }}
+  {{/paper-content}}
 {{/paper-content}}
