Replace 'bold' with '*' for mandatory fields

--- a/travelsFront/app/templates/secretary-manual.hbs
+++ b/travelsFront/app/templates/secretary-manual.hbs
@@ -6,7 +6,7 @@
 				Η Γραμματεία έχει τη δυνατότητα να επεξεργαστεί τα στοιχεία μιας υποβεβλημένης αίτησης μετακίνησης, 
 				αφού μεταβεί στην καρτέλα «Λίστα Αιτήσεων» και επιλέξει την ενέργεια «Επεξεργασία».
 				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία εφόσον αυτά δεν έχουν συμπληρωθεί από τον μετακινούμενο 
-				(με bold σημειώνονται τα υποχρεωτικά πεδία):
+				(με * σημειώνονται τα υποχρεωτικά πεδία):
 			<ul>
 				<li>Έγκριση Αίτησης Μετακίνησης από τον Υπεύθυνο Έργου</li>
 				<li>Έγκριση τελικών δαπανών της Μετακίνησης από τον Υπεύθυνο Έργου</li>
@@ -16,28 +16,28 @@
 				<li>Τόπος Προορισμού - Προς</li>
 				<li>Έναρξη Εργασιών</li>
 				<li>Λήξη Εργασιών</li>
-				<li><b>Αναχώρηση</b></li>
-				<li><b>Επιστροφή</b></li>
-				<li><b>Μέσο Μετακίνησης (Λίστα Επιλογών)</b></li>
-				<li><b>Τιμή Εισιτηρίου</b></li>
-				<li><b>Τρόπος Πληρωμής (Λίστα Επιλογών)</b></li>
-				<li><b>Στοιχεία Πληρωμής</b></li>
-				<li><b>Διανυκτέρευση (Ημερήσια): έξοδα καταλύματος</b></li>
-				<li><b>Τρόπος Πληρωμής (Λίστα Επιλογών)</b></li>
-				<li><b>Στοιχεία Πληρωμής</b></li>
+				<li>Αναχώρηση *</li>
+				<li>Επιστροφή *</li>
+				<li>Μέσο Μετακίνησης (Λίστα Επιλογών) *</li>
+				<li>Τιμή Εισιτηρίου *</li>
+				<li>Τρόπος Πληρωμής (Λίστα Επιλογών) *</li>
+				<li>Στοιχεία Πληρωμής *</li>
+				<li>Διανυκτέρευση (Ημερήσια): έξοδα καταλύματος *</li>
+				<li>Τρόπος Πληρωμής (Λίστα Επιλογών) *</li>
+				<li>Στοιχεία Πληρωμής *</li>
 				<li>Κόστος Συμμετοχής: εγγραφές σε συνέδρια, events κλπ.</li>
 				<li>Τρόπος Πληρωμής (Λίστα Επιλογών)</li>
 				<li>Στοιχεία Πληρωμής</li>
 				<li>Λοιπά Έξοδα Μετακίνησης: πχ εισιτήρια μέσων μαζικής μεταφοράς (προβλεπόμενη τιμή)</li>
 				<li>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</li>
-				<li><b>Κάλυψη Διατροφής (Λίστα Επιλογών)</b></li>
+				<li>Κάλυψη Διατροφής (Λίστα Επιλογών) *</li>
 				<li>Κάλυψη ημερήσιας αποζημίωσης από άλλο φορέα</li>
 				<li>Στοιχεία σχετικά με την μετακίνηση και τη διανομή</li>
-				<li><b>Αρ. Μετακίνησης</b></li>
-				<li><b>Ημ. Πρ. Αίτησης Δαπάνης Μετακίνησης</b></li>
-				<li><b>Αρ. Πρ. Αίτησης Δαπάνης Μετακίνησης</b></li>
-				<li><b>Ημ. Πρ. Απόφασης Μετακίνησης</b></li>
-				<li><b>Αρ. Πρ. Απόφασης Μετακίνησης</b></li>
+				<li>Αρ. Μετακίνησης *</li>
+				<li>Ημ. Πρ. Αίτησης Δαπάνης Μετακίνησης *</li>
+				<li>Αρ. Πρ. Αίτησης Δαπάνης Μετακίνησης *</li>
+				<li>Ημ. Πρ. Απόφασης Μετακίνησης *</li>
+				<li>Αρ. Πρ. Απόφασης Μετακίνησης *</li>
 			</ul>
 				Η Γραμματεία θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές της και στη συνέχεια να υποβάλει την αίτηση. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της.
 			</p>
