--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -4,15 +4,15 @@
 			<h4>Δημιουργία Νέας Αίτησης Μετακίνησης</h4>    
 			<p>
 				Ο μετακινούμενος θα πρέπει να μεταβεί στην καρτέλα «Νέα Αίτηση», προκειμένου να δημιουργήσει μία αίτηση μετακίνησης.
-				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία: (με <b>bold</b> σημειώνονται τα υποχρεωτικά πεδία ενώ τα μη υποχρεωτικά 
+				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία: (με * σημειώνονται τα υποχρεωτικά πεδία ενώ τα μη υποχρεωτικά 
 				συμπληρώνονται σε περίπτωση που ο μετακινούμενος γνωρίζει την τιμή τους ή θέλει να δηλώσει μια επιθυμητή τιμή)
 			<ul>
-				<li><b>Έργο - Υπεύθυνος Έργου (Λίστα Επιλογών)</b></li>
-				<li><b>Αιτιολογία Μετακίνησης</b></li>
-				<li><b>Τόπος Προορισμού - Από</b></li>
-				<li><b>Τόπος Προορισμού - Προς</b></li>
-				<li><b>Έναρξη Εργασιών</b></li>
-				<li><b>Λήξη Εργασιών</b></li>
+				<li>Έργο - Υπεύθυνος Έργου (Λίστα Επιλογών) *</li>
+				<li>Αιτιολογία Μετακίνησης *</li>
+				<li>Τόπος Προορισμού - Από *</li>
+				<li>Τόπος Προορισμού - Προς* </li>
+				<li>Έναρξη Εργασιών *</li>
+				<li>Λήξη Εργασιών *</li>
 				<li>Αναχώρηση</li>
 				<li>Επιστροφή</li>
 				<li>Μέσο Μετακίνησης (Λίστα Επιλογών)</li>
