--- a/travelsFront/app/templates/controller-manual.hbs
+++ b/travelsFront/app/templates/controller-manual.hbs
@@ -6,25 +6,25 @@
 				Η Υπεύθυνη Μετακινήσεων έχει τη δυνατότητα να επεξεργαστεί τα στοιχεία μιας υποβεβλημένης αίτησης αποζημίωσης, 
 				αφού μεταβεί στην καρτέλα «Λίστα Αιτήσεων» και επιλέξει την ενέργεια «Επεξεργασία».
 				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία με τις πραγματικές τελικές τιμές τους 
-				(με bold σημειώνονται τα υποχρεωτικά πεδία):
+				(με * σημειώνονται τα υποχρεωτικά πεδία):
 			<ul>
-				<li><b>Τιμή Εισιτηρίου</b></li>
-				<li><b>Τρόπος Πληρωμής (Λίστα Επιλογών)</b></li>
-				<li><b>Στοιχεία Πληρωμής</b></li>
-				<li><b>Διανυκτέρευση (Ημερήσια): έξοδα καταλύματος</b></li>
-				<li><b>Τρόπος Πληρωμής (Λίστα Επιλογών)</b></li>
-				<li><b>Στοιχεία Πληρωμής</b></li>
+				<li>Τιμή Εισιτηρίου *</li>
+				<li>Τρόπος Πληρωμής (Λίστα Επιλογών) *</li>
+				<li>Στοιχεία Πληρωμής *</li>
+				<li>Διανυκτέρευση (Ημερήσια): έξοδα καταλύματος *</li>
+				<li>Τρόπος Πληρωμής (Λίστα Επιλογών) *</li>
+				<li>Στοιχεία Πληρωμής *</li>
 				<li>Κόστος Συμμετοχής: εγγραφές σε συνέδρια, events κλπ.</li>
 				<li>Τρόπος Πληρωμής (Λίστα Επιλογών)</li>
 				<li>Στοιχεία Πληρωμής</li>
 				<li>Λοιπά Έξοδα Μετακίνησης: πχ εισιτήρια μέσων μαζικής μεταφοράς</li>
 				<li>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</li>
-				<li><b>Κάλυψη Διατροφής (Λίστα Επιλογών)</b></li>
+				<li>Κάλυψη Διατροφής (Λίστα Επιλογών) *</li>
 				<li>Κάλυψη ημερήσιας αποζημίωσης από άλλο φορέα</li>
-				<li><b>Ημ. Πρ. Αίτησης Αποζημίωσης Μετακίνησης</b></li>
-				<li><b>Αρ. Πρ. Αίτησης Αποζημίωσης Μετακίνησης</b></li>
-				<li><b>Ημ. Πρ. Αίτησης Αποζημίωσης Απόφασης Μετακίνησης</b></li>
-				<li><b>Αρ. Πρ. Αίτησης Αποζημίωσης Μετακίνησης</b></li>
+				<li>Ημ. Πρ. Αίτησης Αποζημίωσης Μετακίνησης *</li>
+				<li>Αρ. Πρ. Αίτησης Αποζημίωσης Μετακίνησης *</li>
+				<li>Ημ. Πρ. Αίτησης Αποζημίωσης Απόφασης Μετακίνησης *</li>
+				<li>Αρ. Πρ. Αίτησης Αποζημίωσης Μετακίνησης *</li>
 			</ul>
 				Η Υπεύθυνη Μετακινήσεων θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές της και στη συνέχεια να υποβάλει την αίτηση. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της.
 			</p>
