Remove redundant parameter from onClick event

--- a/travelsFront/app/templates/components/list-filter.hbs
+++ b/travelsFront/app/templates/components/list-filter.hbs
@@ -1,5 +1,5 @@
 <div>
-	{{#paper-button bubbles=false onClick=(action "handleFilterEntry" filters.name )}}{{t 'list.button.search'}}{{/paper-button}}
+	{{#paper-button bubbles=false onClick=(action "handleFilterEntry")}}{{t 'list.button.search'}}{{/paper-button}}
 	{{#paper-select id="filter" value=filters.project.name onChange=(action "handleChange") placeholder=placeholderLabel }}
 		{{#each projects as |project|}}
   		{{#paper-option value=project }}
