--- a/travelsFront/app/templates/components/model-form/fields/date.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/date.hbs
@@ -26,6 +26,7 @@
         readonly=fattrs.readonly
         class="md-input"
         date=(readonly dateValue)
+        options=(hash format="HH:i")
         on-selected=(action handleDate) }}
 </div>
 {{ else }}
