--- a/travelsFront/app/templates/components/list-filter.hbs
+++ b/travelsFront/app/templates/components/list-filter.hbs
@@ -8,8 +8,8 @@
 		{{/each}}
 	{{/paper-select}}
 	{{input value=filters.name  placeholder=(t 'placeholder.filterByName')}}
-	{{input value=filters.startDate placeholder=(t 'placeholder.filterByStartDate')}}	
-	{{input value=filters.endDate placeholder=(t 'placeholder.filterByEndDate')}}
+	{{pick-a-date date=date on-selected=(action (mut filters.startDate)) placeholder=(t 'placeholder.filterByStartDate')}}
+	{{pick-a-date date=date on-selected=(action (mut filters.endDate)) placeholder=(t 'placeholder.filterByEndDate')}}
 	{{#paper-button bubbles=false onClick=(action "clearFilters")}}{{t 'list.button.clear'}}{{/paper-button}}
 </div>
 {{yield results}}
