Fix minor bug concerning depart/return_date appearance in petition list

--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -5,8 +5,8 @@
 <td>{{petition.arrival_point.name}}</td>
 <td>{{to-date petition.created}}</td>
 <td>{{to-date petition.updated}}</td>
-<td>{{to-date petition.task_start_date}}</td>
-<td>{{to-date petition.task_end_date}}</td>
+<td>{{to-date petition.depart_date}}</td>
+<td>{{to-date petition.return_date}}</td>
 <td>{{petition.status_label}}</td>
 <td>{{petition.total_cost}}</td>
 <td class="icon-cell">
