--- a/travelsFront/app/templates/password.hbs
+++ b/travelsFront/app/templates/password.hbs
@@ -1,5 +1,5 @@
 {{ page-toolbar pageTitle=(t "password_change.title") }}
 {{#paper-content}}
-    {{model-form/form model ui='password' submit=(action 'changePassword') submitLabel=(t "password.button.change")}}
+    {{model-form/form model ui='password' submit=(action 'changePassword') submitError=(mut submitError) submitLabel=(t "password.button.change")}}
 {{/paper-content}}
 
