Create filter by DSE
At this moment this filter doesn't exist in backend, so I replaced
'dse' with 'id' just for testing purposes. Later on I shouldn't
forget to change it.

--- a/travelsFront/app/templates/components/list-filter.hbs
+++ b/travelsFront/app/templates/components/list-filter.hbs
@@ -2,6 +2,7 @@
 	<span style="margin-left:1%;">
 		{{t 'filters.title'}}
 	</span>
+	{{input value=filters.dse type="number" placeholder=(t 'placeholder.filterByDSE')}}
 	{{#paper-select id="filter" value=filters.project.name onChange=(action "handleChange") placeholder=placeholderLabel }}
 		{{#each projects as |project|}}
   		{{#paper-option value=project }}
