Set time interval to 5' in pick-a-time component

--- a/travelsFront/app/templates/components/model-form/fields/date.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/date.hbs
@@ -26,7 +26,7 @@
         readonly=fattrs.readonly
         class="md-input"
         date=(readonly dateValue)
-        options=(hash format="HH:i")
+        options=(hash format="HH:i" interval=5)
         on-selected=(action handleDate) }}
 </div>
 {{ else }}
