--- a/travelsFront/app/templates/user-manual.hbs
+++ b/travelsFront/app/templates/user-manual.hbs
@@ -14,6 +14,7 @@
 				link ενεργοποίησης, έχει τη δυνατότητα να συνδεθεί στην εφαρμογή από την καρτέλα «Είσοδος».
 				(Σημειώνεται ότι προκειμένου να αποδοθούν επιπλέον δικαιώματα στον λογαριασμό ενός χρήστη,
 				θα πρέπει ο τελευταίος να επικοινωνήσει με τους διαχειριστές της εφαρμογής.)
+				<br><br>
 				Κατά την πρώτη είσοδο στην εφαρμογή, ο χρήστης θα πρέπει να μεταβεί στην καρτέλα του 
 				«Προφίλ» και να συμπληρώσει τα παρακάτω προσωπικά του στοιχεία:
 			<ul>
@@ -25,7 +26,10 @@
 				<li>Δ.Ο.Υ (Λίστα επιλογών)</li>
 				<li>ΙΒΑΝ</li>
 			</ul>
-				Επιπλέον, από την καρτέλα «Αλλαγή Κωδικού Πρόσβασης», ο χρήστης έχει την δυνατότητα 
+				Επισημαίνεται ότι μέχρι ο χρήστης να συμπληρώσει πλήρως τα στοιχεία του προφίλ του, δεν θα έχει τη δυνατότητα
+				να δημιουργήσει μία νέα αίτηση μετακίνησης.
+				<br><br>
+				Τέλος, από την καρτέλα «Αλλαγή Κωδικού Πρόσβασης», ο χρήστης έχει την δυνατότητα 
 				να αλλάξει το κωδικό πρόσβασης που χρησιμοποιεί για να συνδεθεί στο σύστημα.
 			</p>
 		{{/paper-card-title-text}}
