Update compensations title

--- a/travelsFront/app/templates/user-compensation.hbs
+++ b/travelsFront/app/templates/user-compensation.hbs
@@ -1,4 +1,4 @@
-{{ page-toolbar pageTitle= (t "petition_edit.title") }}
+{{ page-toolbar pageTitle= (t "compensation_edit.title") }}
 
 {{#paper-content}}
   {{#paper-content padding=true}}
