Update logo and page title

--- a/travelsFront/app/templates/application.hbs
+++ b/travelsFront/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{#gen-app siteTitle="Application" siteSubtitle="powered by ember-gen" siteIcon="weekend"}}
+{{#gen-app siteTitle="Travel Expenses" siteSubtitle="powered by Grnet" siteIcon="flight"}}
     {{outlet}}
 {{/gen-app }}
 
