--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -53,8 +53,8 @@
 			<h4>Δημιουργία Αίτησης Αποζημίωσης</h4>
 			<p>Ο μετακινούμενος, μετά την άφιξη του, θα πρέπει να συνδεθεί εκ νέου στο σύστημα και να συμπληρώσει τα ακόλουθα στοιχεία:
 			<ul>
-				<li><b>Ανέβασμα αρχείων</b>: ο μετακινούμενος θα πρέπει να ανεβάσει το πρόγραμμα της μετακίνησης. Σε περίπτωση περισσότερων (π.χ. ατζέντα, αποδεικτικό παρακολούθησης) μπορεί να ανεβάσει ένα αρχείο τύπου zip</li>
-				<li><b>Ατζέντα</b>: Ο μετακινούμενος θα πρέπει να καταγράψει τον απολογισμό της μετακίνησης.</li>
+				<li><b>Ανέβασμα αρχείων</b>: ο μετακινούμενος θα πρέπει να ανεβάσει το πρόγραμμα της μετακίνησης. Σε περίπτωση περισσότερων αρχείων (π.χ. ατζέντα, αποδεικτικό παρακολούθησης) μπορεί να ανεβάσει ένα αρχείο τύπου zip</li>
+				<li><b>Απολογισμός Μετακίνησης</b>: Ο μετακινούμενος θα πρέπει να καταγράψει τον απολογισμό της μετακίνησης.</li>
 				<li><b>Λοιπά Έξοδα Μετακίνησης</b>: πχ εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
 				<li><b>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</b>: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου.</li>
 			</ul>
