Update traveler manual

--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -4,8 +4,7 @@
 			<h4>Δημιουργία Νέας Αίτησης Μετακίνησης</h4>    
 			<p>
 				Ο μετακινούμενος θα πρέπει να μεταβεί στην καρτέλα «Νέα Αίτηση», προκειμένου να δημιουργήσει μία αίτηση μετακίνησης.
-				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία: (με * σημειώνονται τα υποχρεωτικά πεδία ενώ τα μη υποχρεωτικά 
-				συμπληρώνονται σε περίπτωση που ο μετακινούμενος γνωρίζει την τιμή τους ή θέλει να δηλώσει μια επιθυμητή τιμή)
+				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία: (με * σημειώνονται τα υποχρεωτικά πεδία)
 			<ul>
 				<li>Έργο - Υπεύθυνος Έργου (Λίστα Επιλογών) *</li>
 				<li>Αιτιολογία Μετακίνησης *</li>
@@ -13,15 +12,6 @@
 				<li>Τόπος Προορισμού - Προς* </li>
 				<li>Έναρξη Εργασιών *</li>
 				<li>Λήξη Εργασιών *</li>
-				<li>Αναχώρηση</li>
-				<li>Επιστροφή</li>
-				<li>Μέσο Μετακίνησης (Λίστα Επιλογών)</li>
-				<li>Τιμή Εισιτηρίου</li>
-				<li>Κάλυψη Διατροφής (Λίστα Επιλογών)</li>
-				<li>Διανυκτέρευση (Ημερήσια): έξοδα καταλύματος (θα πρέπει να συμπληρωθούν είτε σε τοπικό νόμισμα είτε σε ευρώ)</li>
-				<li>Λοιπά Έξοδα Μετακίνησης: πχ εισιτήρια μέσων μαζικής μεταφοράς (προβλεπόμενη τιμή)</li>
-				<li>Λοιπά Έξοδα Μετακίνησης - Περιγραφή: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου</li>
-				<li>Κόστος Συμμετοχής: εγγραφές σε συνέδρια, events κλπ. (θα πρέπει να συμπληρωθεί είτε σε τοπικό νόμισμα είτε σε ευρώ).</li>
 				<li>Αρχικές Προτάσεις Μετακινούμενου</li>
 			</ul>
 				Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτησή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Μετακίνησης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
